Added actors to final project
